--- a/week_1/mission_1/index.html
+++ b/week_1/mission_1/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>회원 가입 페이지</title>
-        <link rel="stylesheet" type="text/css" href="mission_1.css" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
         <h2>회원 가입</h2>
